updating my personal information

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am hear to learn about the wonderful world of coding</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Salt Lake City, Utah</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy spending my climb rock climbing and building things</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Owning a company that makes peoples lives better</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>My wife and I bought our first house in Salt Lake City last year where we live with our dog, Mowgli and our two cats</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because the possibilities are endless in this world of ever growing technological capabilites.</p>
     </section>
 
     <footer id="footer">
