fixing a spelling error

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am hear to learn about the wonderful world of coding</p>
+      <p>I am here to learn about the wonderful world of coding</p>
       <h1>Where I'm From</h1>
       <p>I am from Salt Lake City, Utah</p>
       <h1>What are your favorite hobbies?</h1>
