fixing an error under 'hobbies'

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm From</h1>
       <p>I am from Salt Lake City, Utah</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I enjoy spending my climb rock climbing and building things</p>
+      <p>I enjoy spending my time rock climbing and building things</p>
       <h1>What's your dream job?</h1>
       <p>Owning a company that makes peoples lives better</p>
       <h1>Where do you live?</h1>
